--- a/.env
+++ b/.env
@@ -9,17 +9,32 @@ DB_API_2_DATABASE=api_2
 DB_API_2_USER=root
 DB_API_2_PASSWORD=FPuQgrH9q41)
 
-DB_SIGU_LECTURA_HOST=95.111.236.101
-DB_SIGU_LECTURA_PORT=3307
-DB_SIGU_LECTURA_DATABASE=copia_jaguar_db_sigu
-DB_SIGU_LECTURA_USER=root
-DB_SIGU_LECTURA_PASSWORD=FPuQgrH9q41)
+# DB_SIGU_LECTURA_HOST=95.111.236.101
+# DB_SIGU_LECTURA_PORT=3307
+# DB_SIGU_LECTURA_DATABASE=copia_jaguar_db_sigu
+# DB_SIGU_LECTURA_USER=root
+# DB_SIGU_LECTURA_PASSWORD=FPuQgrH9q41)
 
-DB_SIGU_INSERT_HOST=95.111.236.101
-DB_SIGU_INSERT_PORT=3307
-DB_SIGU_INSERT_DATABASE=copia_jaguar_db_sigu
-DB_SIGU_INSERT_USER=root
-DB_SIGU_INSERT_PASSWORD=FPuQgrH9q41)
+DB_SIGU_LECTURA_HOST=143.244.154.28
+DB_SIGU_LECTURA_PORT=3306
+DB_SIGU_LECTURA_DATABASE=jaguar_db_sigu
+DB_SIGU_LECTURA_USER=user_sigu
+DB_SIGU_LECTURA_PASSWORD=jrt532ws58%&rd5TTY
+
+
+# DB_SIGU_INSERT_HOST=95.111.236.101
+# DB_SIGU_INSERT_PORT=3307
+# DB_SIGU_INSERT_DATABASE=copia_jaguar_db_sigu
+# DB_SIGU_INSERT_USER=root
+# DB_SIGU_INSERT_PASSWORD=FPuQgrH9q41)
+
+
+DB_SIGU_INSERT_HOST=143.244.154.28
+DB_SIGU_INSERT_PORT=3306
+DB_SIGU_INSERT_DATABASE=jaguar_db_sigu
+DB_SIGU_INSERT_USER=ti_manuel
+DB_SIGU_INSERT_PASSWORD=w%RNBUx52*Mv3Vr&wbN6m&g9
+
 
 
 
